--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -331,6 +331,10 @@ jobs:
         # Increased the page-file size due to memory-consumption of native-image command
         # For details see https://github.com/actions/virtual-environments/issues/785
         uses: al-cheb/configure-pagefile-action@v1.2
+      - name: Prebuild TFW
+        shell: bash
+        run: |
+          mvn clean install -DskipITs -DskipTests
       - name: Build in Native mode
         shell: bash
         run: |
