--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -2,33 +2,9 @@ name: "Pull Request Build"
 on:
   - pull_request
 jobs:
-  validate-format:
-    name: Validate format
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ 11 ]
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Install JDK {{ matrix.java }}
-        uses: joschi/setup-jdk@e87a7cec853d2dd7066adf837fe12bf0f3d45e52
-        with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java }}
-          check-latest: true
-      - name: Build with Maven
-        run: |
-          mvn -V -B -s .github/mvn-settings.xml verify -Pframework,examples -Dvalidate-format -DskipTests -DskipITs
   quarkus-main-build:
     name: Quarkus main build
     runs-on: ubuntu-latest
-    needs: validate-format
     strategy:
       matrix:
         java: [ 11 ]
@@ -59,110 +35,15 @@ jobs:
         with:
           name: maven-repo
           path: maven-repo.tgz
-  linux-build-jvm-released:
-    name: PR - Linux - JVM build - Released Versions
-    runs-on: ubuntu-latest
-    needs: validate-format
-    strategy:
-      matrix:
-        quarkus-version: ["current"]
-        java: [ 11 ]
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Reclaim Disk Space
-        run: .github/ci-prerequisites.sh
-      - name: Install JDK {{ matrix.java }}
-        uses: joschi/setup-jdk@e87a7cec853d2dd7066adf837fe12bf0f3d45e52
-        with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java }}
-          check-latest: true
-      - name: Build in JVM mode
-        run: |
-          if [[ "${{ matrix.quarkus-version }}" = 1.* ]]; then
-             EXCLUDE_MODULES="-pl !examples/grpc"
-          fi
-
-          if [[ "${{ matrix.quarkus-version }}" != current ]]; then
-             QUARKUS_VERSION="-Dquarkus.platform.version=${{ matrix.quarkus-version }}"
-          fi
-
-          mvn -B -fae -s .github/mvn-settings.xml clean install -Pframework,examples -Dvalidate-format $QUARKUS_VERSION $EXCLUDE_MODULES
-      - name: Zip Artifacts
-        run: |
-          zip -R artifacts-quarkus${{ matrix.quarkus-version }}-linux-jvm${{ matrix.java }}.zip '*-reports/*'
-      - name: Archive artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: ci-artifacts
-          path: artifacts-quarkus${{ matrix.quarkus-version }}-linux-jvm${{ matrix.java }}.zip
-  linux-build-jvm-latest:
-    name: PR - Linux - JVM build - Latest Version
-    runs-on: ubuntu-latest
-    needs: quarkus-main-build
-    strategy:
-      matrix:
-        quarkus-version: ["999-SNAPSHOT"]
-        java: [ 11 ]
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Reclaim Disk Space
-        run: .github/ci-prerequisites.sh
-      - name: Install JDK {{ matrix.java }}
-        uses: joschi/setup-jdk@e87a7cec853d2dd7066adf837fe12bf0f3d45e52
-        with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java }}
-          check-latest: true
-      - name: Download Maven Repo
-        uses: actions/download-artifact@v1
-        with:
-          name: maven-repo
-          path: .
-      - name: Extract Maven Repo
-        shell: bash
-        run: tar -xzf maven-repo.tgz -C ~
-      - name: Build Quarkus CLI
-        run: |
-          git clone https://github.com/quarkusio/quarkus.git && cd quarkus/devtools/cli && mvn -B -s ../../../.github/mvn-settings.xml clean install -Dquickly -Prelocations
-      - name: Install Quarkus CLI
-        run: |
-          cat <<EOF > ./quarkus-dev-cli
-          #!/bin/bash
-          java -jar $PWD/quarkus/devtools/cli/target/quarkus-cli-999-SNAPSHOT-runner.jar "\$@"
-          EOF
-          chmod +x ./quarkus-dev-cli
-      - name: Build in JVM mode
-        run: |
-          mvn -B -fae -s .github/mvn-settings.xml clean install -Pframework,examples,extensions -Drun-cli-tests -Dts.quarkus.cli.cmd="${PWD}/quarkus-dev-cli" -Dquarkus.platform.version="${{ matrix.quarkus-version }}"
-      - name: Zip Artifacts
-        run: |
-          zip -R artifacts-latest-linux-jvm${{ matrix.java }}.zip '*-reports/*'
-      - name: Archive artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: ci-artifacts
-          path: artifacts-latest-linux-jvm${{ matrix.java }}.zip
-  windows-build-jvm-latest:
-    name: PR - Windows - JVM build - Latest Version
+  windows-build-native-latest:
+    name: Daily - Windows - Native build - Latest Version
     runs-on: windows-latest
     needs: quarkus-main-build
     strategy:
       matrix:
         java: [ 11 ]
         quarkus-version: ["999-SNAPSHOT"]
+        graalvm-version: [ "22.1.0.java11"]
     steps:
       - uses: actions/checkout@v1
       - uses: actions/cache@v1
@@ -185,19 +66,34 @@ jobs:
       - name: Extract Maven Repo
         shell: bash
         run: tar -xzf maven-repo.tgz -C ~
-      - name: Build in JVM mode
+      - name: Install cl.exe
+        uses: ilammy/msvc-dev-cmd@v1
+      - uses: microsoft/setup-msbuild@v1
+      - name: Setup GraalVM
+        id: setup-graalvm
+        uses: DeLaGuardo/setup-graalvm@master
+        with:
+          graalvm-version: ${{ matrix.graalvm-version }}
+      - name: Install native-image component
+        run: |
+          gu.cmd install native-image
+      - name: Configure Pagefile
+        # Increased the page-file size due to memory-consumption of native-image command
+        # For details see https://github.com/actions/virtual-environments/issues/785
+        uses: al-cheb/configure-pagefile-action@v1.2
+      - name: Build in Native mode
         shell: bash
         run: |
-          mvn -B -fae -s .github/mvn-settings.xml clean install -Pframework,examples -Dquarkus.platform.version="${{ matrix.quarkus-version }}"
+          mvn clean verify -B -fae -s .github/mvn-settings.xml clean install -Pframework,examples,native -Dquarkus.native.container-build=false -Dquarkus.platform.version="${{ matrix.quarkus-version }}" -f examples/blocking-reactive-model/
       - name: Zip Artifacts
         shell: bash
         if: failure()
         run: |
           # Disambiguate windows find from cygwin find
-          /usr/bin/find . -name '*-reports/*' -type d | tar -czf artifacts-latest-windows-jvm${{ matrix.java }}.tar -T -
+          /usr/bin/find . -name '*-reports/*' -type d | tar -czf artifacts-latest-windows-native${{ matrix.java }}.tar -T -
       - name: Archive artifacts
         if: failure()
         uses: actions/upload-artifact@v1
         with:
           name: ci-artifacts
-          path: artifacts-latest-windows-jvm${{ matrix.java }}.tar
+          path: artifacts-latest-windows-native${{ matrix.java }}.tar
