--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,21 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus.qe</groupId>
+                <artifactId>quarkus-test-opentelemetry-extension-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus.qe</groupId>
+                <artifactId>quarkus-test-opentelemetry-extension</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus.qe</groupId>
+                <artifactId>quarkus-test-opentelemetry-extension-parent</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus.qe</groupId>
                 <artifactId>quarkus-test-containers</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -335,6 +350,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
+                <module>quarkus-test-opentelemetry-extension</module>
                 <module>quarkus-test-core</module>
                 <module>quarkus-test-cli</module>
                 <module>quarkus-test-containers</module>
